--- a/subscribe/index.html
+++ b/subscribe/index.html
@@ -1,14 +1,17 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/img/icon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SubScribe</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-    <!-- <script crossOrigin="anonymous" src="//unpkg.com/react-scan/dist/auto.global.js"></script> -->
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/img/icon.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>SubScribe</title>
+</head>
+
+<body>
+  <div id="root" class="dark:bg-gray-900"></div>
+  <script type="module" src="/src/main.tsx"></script>
+  <!-- <script crossOrigin="anonymous" src="//unpkg.com/react-scan/dist/auto.global.js"></script> -->
+</body>
+
 </html>
